@startuml DiagrammeUML
class Joueur
class Carte
class GameManager
class PlaceTerrain
class PlaceDeck
class CarteSettings
class GrosseCarte
class ChoixDeFamille
class MainMenu
class BoutonChoix

Joueur - PlaceTerrain : > possède 3 à 5
PlaceTerrain -- GameManager : > participe à 1
Carte - Joueur : < possède 0..n
Carte - GameManager : > compose n..m
CarteSettings -- Carte : < est lié à 1
GameManager - BoutonChoix : > nécessite 5
ChoixDeFamille - MainMenu 
MainMenu - GameManager : > lance 1
GrosseCarte - CarteSettings : > montre 1
PlaceDeck -- Joueur : < possède 5
JoueurManager - GameManager
MainMenu - JoueurManager

@enduml